--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 install:
-  - "pip install --use-mirrors mock"
+  - pip install -r tests/requirements.txt
 python:
   - "2.7"
   - "3.2"
